--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Desenvolvedor FrontEnd Júnior, veja meus projetos!">
   <link rel="stylesheet" href="style.min.css">
   <link rel="shortcut icon" href="/img/detalhe.svg" type="image/x-icon">
-  <title>Portifólio Web</title>
+  <title>Portifólio Web Novo</title>
 </head>
 
 <body>
