--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Desenvolvedor FrontEnd Júnior, veja meus projetos!">
   <link rel="stylesheet" href="style.min.css">
-  <link rel="shortcut icon" href="/img/detalhe.svg" type="image/x-icon">
-  <title>Portifólio Web Novo</title>
+  <link rel="icon" href="/img/detalhe.svg" type="image/svg+xml">
+  <title>Portifólio Web Diogo</title>
 </head>
 
 <body>
