lista menu alteração: experiências

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src=" /img/marca.svg" alt="Logo Lobo">
     <nav>
       <ul class="menu-lista">
-        <li><a href="#experiencia">Experiência</a></li>
+        <li><a href="#experiencia">Experiências</a></li>
         <li><a href="#formacao">Formação</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
